--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         </div>
         <div class="text-center">
             <h1 id="brlConversion" class="text-2x2 font-weight-bold"></h1>
+            <hr>
+            <button id="install-button" style="display: none;">Instalar Conversor</button>
         </div>
     </div>
 
